<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--android:maxLines="1"    最大长度只能是一行-->
    <EditText
        android:id="@+id/me_regist_input_username"
        style="@style/login_regist_txt"
        android:layout_marginTop="@dimen/dp_40"
        android:hint="@string/hint_regist_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--android:maxLines="1"    最大长度只能是一行-->
    <EditText
        android:id="@+id/me_regist_input_pw"
        style="@style/login_regist_txt"
        android:hint="@string/hint_login_pw"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/me_regist_input_username" />

    <!--android:maxLines="1"    最大长度只能是一行-->
    <EditText
        android:id="@+id/me_regist_input_pw2"
        style="@style/login_regist_txt"
        android:hint="@string/hint_regist_pw"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/me_regist_input_pw" />

    <EditText
        android:id="@+id/me_regist_input_verification"
        android:layout_width="@dimen/dp_190"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/me_regist_input_pw2"
        android:hint="@string/hint_regist_verification"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/me_regist_btn_verification"
        android:layout_width="0dp"
        android:layout_marginLeft="@dimen/dp_20"
        app:layout_constraintLeft_toRightOf="@+id/me_regist_input_verification"
        android:layout_height="@dimen/dp_37"
        app:layout_constraintTop_toBottomOf="@+id/me_regist_input_pw2"
        android:scaleType="fitXY"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/me_regist_btn_regist"
        style="@style/login_regist_txt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:text="注册"
        app:layout_constraintTop_toBottomOf="@id/me_regist_btn_verification" />

</androidx.constraintlayout.widget.ConstraintLayout>