<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_newgood"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_newgood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_20"
                app:layout_constraintBottom_toBottomOf="@id/iv_img"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_img" />

            <View
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_1"
                android:background="#fff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_newgood" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con_new"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                app:layout_constraintTop_toBottomOf="@id/iv_img">

                <TextView
                    android:id="@+id/tv_new_all"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/new_good_all"
                    android:textColor="#000"
                    android:textSize="@dimen/dp_20"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/ll_new"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_new"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toRightOf="@id/tv_new_all"
                    app:layout_constraintRight_toLeftOf="@id/tv_new_sort"
                    app:layout_constraintTop_toTopOf="@id/tv_new_all">

                    <TextView
                        android:id="@+id/tv_new_price"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/new_good_price"
                        android:textColor="#000"
                        android:textSize="@dimen/dp_20" />

                    <LinearLayout
                        android:id="@+id/ll_newgood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_up_new"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_13"
                            android:src="@drawable/ic_arrow_up_normal" />

                        <ImageView
                            android:id="@+id/iv_down_new"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_13"
                            android:src="@drawable/ic_arrow_down_normal" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_new_sort"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/new_good_sort"
                    android:textColor="#000"
                    android:textSize="@dimen/dp_20"
                    app:layout_constraintLeft_toRightOf="@id/ll_new"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ll_new" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="#D6D1D1"
                app:layout_constraintTop_toBottomOf="@id/con_new" />

            <View
                android:id="@+id/view_big"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:background="#F4EFEF"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ry_new"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/view_big" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ry_waterful"
                android:background="#fff"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/con_new" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>